Make build work with Java17 (#27)
In short: now build works on both, Java 11 and Java 17 (tested with 11 and 17 Temurin on Linux).

Similar to https://github.com/eclipse/sisu.inject/pull/61 and similarly, once this merged removal of Tycho is pending.

Changes:
* update GH workflow to use mvnw (instead of implicitly provided mvn by setup-java)
* update wrapper to 3.2.0 and Maven to 3.9.1
* update all build plugins to their latest versions